# SPDX-FileCopyrightText: The unnest authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "unnest"
description = "Macros for an unnested control flow."
version = "0.3.0"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/unnest"
keywords = ["option", "some", "result", "ok", "expression"]
categories = ["rust-patterns"]
edition = "2021"
